mod network wired states

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -65,7 +65,19 @@ ${fs_bar 4 /}
 ${color #98c2c7}Home分区: ${color}${alignr}${fs_free /home} / ${fs_size /home}
 ${fs_bar 4 /home}
 
+# ${color #98c2c7}网络使用:${color}
+# 下载速度:$alignr${downspeed wlp3s0}/s
+# 上传速度:$alignr${upspeed wlp3s0}/s
+# ${downspeedgraph wlp3s0 324D23 77B753}
+
+${if_existing /sys/class/net/wlp3s0/operstate up} 
 ${color #98c2c7}网络使用:${color}
 下载速度:$alignr${downspeed wlp3s0}/s
 上传速度:$alignr${upspeed wlp3s0}/s
 ${downspeedgraph wlp3s0 324D23 77B753}
+${else}
+${color #98c2c7}网络使用:${color}
+下载速度:$alignr${downspeed enp4s0f2}/s
+上传速度:$alignr${upspeed enp4s0f2}/s
+${downspeedgraph enp4s0f2 324D23 77B753}
+${endif}
